--- a/src/assets/css/light.css
+++ b/src/assets/css/light.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
 
 * {
   box-sizing: border-box;
@@ -10,7 +10,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   background: #f0f2f5;
   width: 100%;
   height: 100vh;
@@ -80,7 +80,7 @@ p {
 }
 
 .buttons a:after {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   right: -10px;
